# Hexapod_project

./: CMakeCache.txt  CMakeLists.txt  notatka.txt  package.xml  tripod_gait.hpp
include/: gait_controller.hpp
include/hex_controller/: bipod_gait.hpp  gait_controller.hpp  gait_manager.hpp  hexapod_teleop.hpp  single_leg_gait.hpp  tripod_gait.hpp
include/hex_final_urdf_description/: base_gait.h  one_leg_gait.h  tripod_gait.h  two_leg_gait.h
include/hexapod_project/: base_gait.h  one_leg_gait.h
launch/: controller.launch  controller.yaml  display.launch  gazebo.launch  hex_world.launch
meshes/: base_link.stl  hip_link_1_1.stl  hip_link_2_1.stl  hip_link_3_1.stl  hip_link_4_1.stl  hip_link_5_1.stl  hip_link_6_1.stl  shin_link_1_1.stl  shin_link_2_1.stl  shin_link_3_1.stl  shin_link_4_1.stl  shin_link_5_1.stl  shin_link_6_1.stl  thigh_link_1_1.stl  thigh_link_2_1.stl  thigh_link_3_1.stl  thigh_link_4_1.stl  thigh_link_5_1.stl  thigh_link_6_1.stl
scripts/: move_hexapod.py
src/: base_gait.cpp  bipod_gait.cpp  gait_controller.cpp  gait_manager.cpp  hexapod_controller_node.cpp  hexapod_teleop_node.cpp  one_leg_gait.cpp  single_leg_gait.cpp  stand_up.cpp  tests_node.cpp  tripod_gait.cpp  two_leg_gait.cpp  two_leg_walk_gait_node.cpp  walk_two_leg_gait.cpp
src/legacy/: hexapod_teleop_node.cpp  single_leg_gait.cpp
urdf/: hex_final_urdf.gazebo  hex_final_urdf.trans  hex_final_urdf.xacro  materials.xacro  set_initial_joint_positions.xacro
worlds/: hex_test.world
